@@ -1,5 +1,12 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2007-09-16 patrick  Added vpr::ThreadWin32::setRunOn() and
+                    vpr::ThreadWin32::getRunOn(). Added Linux-specific
+                    implementations of vpr::ThreadPosix::setRunOn() and
+                    vpr::ThreadPosix::getRunOn(). Changed
+                    vpr::Thread::getRunOn() so that it now returns
+                    std::vector<unsigned int>.
+                    NEW VERSION: 2.1.6
 2007-09-06 patrick  Implemented stack trace printing on Mac OS X.
 2007-09-04 patrick  Set VPR_BASE_DIR automatically on all platforms.
 2007-08-21 patrick  Removed support for SPROC.
